--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/native-stack": "^6.9.12",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8"
   },
@@ -18,6 +20,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
   "private": true
