--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-snap-carousel": "^3.9.1",
+    "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
