--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
