--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native-stack": "^6.9.12",
+    "@types/react-native-dotenv": "^0.2.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-dotenv": "^3.4.8",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "^13.9.0",
     "react-native-swiper": "^1.6.0"
