--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-dotenv": "^0.2.0",
     "expo": "~48.0.15",
+    "expo-blur": "^12.3.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "nativewind": "^2.0.11",
