--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-uuid": "^2.0.1"
+    "react-native-uuid": "^2.0.1",
+    "expo-image-manipulator": "~11.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
