--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-dotenv": "^0.2.0",
     "expo": "~48.0.15",
+    "expo-application": "~5.1.1",
+    "expo-auth-session": "~4.0.3",
     "expo-blur": "~12.2.2",
+    "expo-crypto": "~12.2.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dotenv": "^3.4.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
