--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --detectOpenHandles"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -24,6 +25,8 @@
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
+    "jest": "^29.2.1",
+    "jest-expo": "^48.0.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -35,10 +38,12 @@
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.1",
+    "react-test-renderer": "^18.2.0",
     "ts-pattern": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
@@ -52,5 +57,11 @@
     "tailwindcss": "^3.3.2",
     "typescript": "^4.9.4"
   },
-  "private": true
+  "private": true,
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg|@firebase/.*|firebase)"
+    ]
+  }
 }
