--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "test": "jest --detectOpenHandles"
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -25,8 +24,6 @@
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
-    "jest": "^29.2.1",
-    "jest-expo": "^48.0.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -38,12 +35,10 @@
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.1",
-    "react-test-renderer": "^18.2.0",
     "ts-pattern": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/jest": "^29.5.2",
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
     "@typescript-eslint/eslint-plugin": "^5.59.9",
