--- a/app.json
+++ b/app.json
@@ -1,9 +1,10 @@
 {
   "expo": {
     "scheme": "com.unihubteam.unihub",
-    "name": "unihub",
+    "name": "UniHub",
+    "description": "A buy and sell marketplace exclusive to students in a campus.",
     "slug": "unihub",
-    "version": "1.0.0",
+    "version": "1.2.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -22,7 +23,8 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.unihubteam.unihub"
+      "package": "com.unihubteam.unihub",
+      "versionCode": 4
     },
     "web": {
       "favicon": "./assets/favicon.png"
