--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@react-navigation/native-stack": "^6.9.12",
     "@types/react-native-dotenv": "^0.2.0",
     "algoliasearch": "^4.18.0",
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-application": "~5.1.1",
     "expo-auth-session": "~4.0.3",
     "expo-blur": "~12.2.2",
     "expo-crypto": "~12.2.1",
+    "expo-device": "~5.2.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
