--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "algoliasearch": "^4.18.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "expo": "~48.0.15",
     "expo-application": "~5.1.1",
     "expo-auth-session": "~4.0.3",
@@ -26,6 +27,7 @@
     "expo-device": "~5.2.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
+    "expo-linear-gradient": "~12.1.2",
     "expo-notifications": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
@@ -43,8 +45,7 @@
     "react-native-svg": "13.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-uuid": "^2.0.1",
-    "ts-pattern": "^4.3.0",
-    "expo-linear-gradient": "~12.1.2"
+    "ts-pattern": "^4.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
